transcrypt/development/manual_tests/static_types/__target__/static_types.out

D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\shipment>python D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\__main__.py -b -m -da -sf -n -de -ds -dc D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types 

D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\shipment>call D:\python36_anaconda\python.exe D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\__main__.py -b -m -da -sf -n -de -ds -dc D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types 
Transcrypt (TM) Python to JavaScript Small Sane Subset Transpiler Version 3.7.1
Copyright (C) Geatec Engineering. License: Apache 2.0


Performing static type validation on application: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/modules/org/transcrypt/__runtime__.py
The following inconsistencies were found:
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:3: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:3: error: Name '__include__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:4: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:4: error: Name '__include__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:5: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:5: error: Name '__include__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:7: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:9: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:11: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:12: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:13: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:19: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:26: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:99: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:119: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:133: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:235: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:261: error: Name '__pragma__' is not defined
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\modules\org\transcrypt\__runtime__.py:278: error: Name '__pragma__' is not defined
	

Saving target code in: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/__target__/org.transcrypt.__runtime__.js
Performing static type validation on application: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types.py
The following inconsistencies were found:
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod2\__init__.py:2: error: Incompatible return value type (got "int", expected "str")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod1.py:3: error: Incompatible types in assignment (expression has type "float", variable has type "int")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod1.py:4: error: Incompatible return value type (got "str", expected "int")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\static_types.py:8: error: Incompatible types in assignment (expression has type "float", variable has type "int")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\static_types.py:16: error: Incompatible return value type (got "int", expected "Iterator[int]")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\static_types.py:19: error: No return value expected
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\static_types.py:26: error: No return value expected
	

Checking: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types.py
	Internal error in lightweight consistency checker, remainder of module skipped
Performing static type validation on application: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/modules/typing/__init__.py

Saving target code in: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/__target__/typing.js
Performing static type validation on application: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/mod1.py
The following inconsistencies were found:
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod1.py:3: error: Incompatible types in assignment (expression has type "float", variable has type "int")
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod1.py:4: error: Incompatible return value type (got "str", expected "int")
	

Performing lightweight consistency check on module: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/mod1.py
	Line 3: local variable 'a' is assigned to but never used

Saving target code in: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/__target__/mod1.js
Performing static type validation on application: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/mod2/__init__.py
The following inconsistencies were found:
	D:\activ_tosh\geatec\transcrypt\qquick\Transcrypt\transcrypt\development\manual_tests\static_types\mod2\__init__.py:2: error: Incompatible return value type (got "int", expected "str")
	

Saving target code in: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/__target__/mod2.js
Saving target code in: D:/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/__target__/static_types.js

Ready
